# vapix-python

./: pyproject.toml
src/vapix_python/: OpticsControl.py  PTZControl.py  VapixAPI.py
