[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vapix-python"
version = "0.1.0"
description = "Python interface for Axis cameras using the VAPIX API"
requires-python = ">=3.7"
dependencies = [
    "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["vapix_python"]